# mac_tuner

./: .gitignore  APPLE_REVIEW_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  install-macaudit.command  install.sh  pyproject.toml  release.sh  requirements.txt
.github/workflows/: release.yml
docs/: engineering-backlog.md  index.html
macaudit/: __init__.py  config.py  constants.py  diff.py  enums.py  history.py  main.py  system_info.py
macaudit/checks/: apps.py  base.py  dev_env.py  disk.py  hardware.py  homebrew.py  malware.py  memory.py  network.py  privacy.py  secrets.py  security.py  system.py
macaudit/fixer/: __init__.py  executor.py  runner.py
macaudit/ui/: header.py  narrator.py  progress.py  report.py  theme.py  welcome.py
mactuner/: __init__.py  main.py  system_info.py
mactuner/checks/: apps.py  base.py  dev_env.py  disk.py  hardware.py  homebrew.py  memory.py  network.py  privacy.py  secrets.py  security.py  system.py
mactuner/fixer/: __init__.py  executor.py  runner.py
mactuner/ui/: header.py  narrator.py  progress.py  report.py  theme.py  welcome.py
tests/: conftest.py  test_apps.py  test_base.py  test_checks_system.py  test_config.py  test_diff.py  test_executor.py  test_health_score.py  test_history.py  test_profile_filter.py  test_report.py  test_secrets.py
