[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macaudit"
version = "1.12.0"
description = "Mac System Health Inspector & Auditor — narrated, educational, beautiful"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mac Audit" }]
keywords = ["macos", "system", "health", "audit", "terminal"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Environment :: Console",
]
dependencies = [
    "rich>=13.7.0",
    "click>=8.1.7",
    "simple-term-menu>=1.6.0",
]

[project.scripts]
macaudit = "macaudit.main:cli"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["macaudit"]
